--- a/modelrailwaymanager/App.xaml
+++ b/modelrailwaymanager/App.xaml
@@ -1,9 +1,9 @@
 ﻿<Application
-    x:Class="uwp_mvvm_template.App"
+    x:Class="ModelRailwayManager.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:uwp_mvvm_template"
-    xmlns:viewModels="using:uwp_mvvm_template"
+    xmlns:local="using:ModelRailwayManager"
+    xmlns:viewModels="using:ModelRailwayManager"
     RequestedTheme="Light">
     <Application.Resources>
         <viewModels:ViewModelLocator x:Key="Locator" />
