--- a/modelrailwaymanager/Views/SecondPage.xaml
+++ b/modelrailwaymanager/Views/SecondPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="uwp_mvvm_template.SecondPage"
+    x:Class="ModelRailwayManager.SecondPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:UwpMVVMTemplate"
