--- a/modelrailwaymanager/Views/SettingsPage/SettingsPage.xaml
+++ b/modelrailwaymanager/Views/SettingsPage/SettingsPage.xaml
@@ -1,13 +1,13 @@
 ﻿<Page
-    x:Class="ModelRailwayManager.SecondPage"
+    x:Class="ModelRailwayManager.SettingsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:UwpMVVMTemplate"
+    xmlns:local="using:ModelRailwayManager.SettingsPage"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <TextBlock Text="SecondView"/>
+        <TextBlock Text="Settings"/>
     </Grid>
 </Page>
