--- a/modelrailwaymanager/Views/TrackPage/TrackPage.xaml
+++ b/modelrailwaymanager/Views/TrackPage/TrackPage.xaml
@@ -1,13 +1,12 @@
 ﻿<Page
-    x:Class="ModelRailwayManager.MainPage"
+    x:Class="ModelRailwayManager.TrackPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:UwpMVVMTemplate"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Button  FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center" Command="{Binding NavigateCommand}">Go to second view</Button>
+        <TextBlock Text="Track Page"/>
     </Grid>
 </Page>
