--- a/modelrailwaymanager/Views/TrackPage/TrackPage.xaml
+++ b/modelrailwaymanager/Views/TrackPage/TrackPage.xaml
@@ -6,7 +6,51 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <TextBlock Text="Track Page"/>
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="3*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height=".125*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Button Grid.Row="0" 
+                Grid.Column="0"
+                Content="Add track"/>
+        <GridView Grid.Row="1"
+                  x:Name="TrackListView"
+                  Grid.ColumnSpan="3"
+                  ItemsSource="{Binding TrackList}">
+            <GridView.Header>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="200"/>
+                        <ColumnDefinition Width="200"/>
+                    </Grid.ColumnDefinitions>
+                    <GridViewHeaderItem Grid.Column="0"
+                                        FontWeight="Bold"
+										Content="Partnumber"/>
+                    <GridViewHeaderItem Grid.Column="1"
+                                        FontWeight="Bold"
+										Content="Count"/>
+                </Grid>
+            </GridView.Header>
+            <GridView.ItemTemplate>
+                <DataTemplate>
+                    <Grid Margin="12 0 0 0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="200"/>
+                            <ColumnDefinition Width="200"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Grid.Column="0" 
+                                   Text="{Binding PartNumber}"/>
+                        <TextBlock Grid.Column="1" 
+                                   Text="{Binding Count}"/>
+                    </Grid>
+                </DataTemplate>
+            </GridView.ItemTemplate>
+        </GridView>
     </Grid>
 </Page>
