Added track page

--- a/modelrailwaymanager/App.xaml
+++ b/modelrailwaymanager/App.xaml
@@ -6,6 +6,11 @@
     xmlns:viewModels="using:ModelRailwayManager"
     RequestedTheme="Light">
     <Application.Resources>
-        <viewModels:ViewModelLocator x:Key="Locator" />
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="StylesDictionary.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+            <viewModels:ViewModelLocator x:Key="Locator" />
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
