--- a/modelrailwaymanager/Views/TrackPage/TrackPage.xaml
+++ b/modelrailwaymanager/Views/TrackPage/TrackPage.xaml
@@ -6,51 +6,128 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid>
+    <Grid >
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="3*"/>
-            <ColumnDefinition Width="3*"/>
-            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="300"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height=".125*"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <Button Grid.Row="0" 
-                Grid.Column="0"
-                Content="Add track"/>
-        <GridView Grid.Row="1"
-                  x:Name="TrackListView"
-                  Grid.ColumnSpan="3"
-                  ItemsSource="{Binding TrackList}">
-            <GridView.Header>
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="200"/>
-                        <ColumnDefinition Width="200"/>
-                    </Grid.ColumnDefinitions>
-                    <GridViewHeaderItem Grid.Column="0"
-                                        FontWeight="Bold"
-										Content="Partnumber"/>
-                    <GridViewHeaderItem Grid.Column="1"
-                                        FontWeight="Bold"
-										Content="Count"/>
-                </Grid>
-            </GridView.Header>
-            <GridView.ItemTemplate>
-                <DataTemplate>
-                    <Grid Margin="12 0 0 0">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="200"/>
-                            <ColumnDefinition Width="200"/>
-                        </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Column="0" 
-                                   Text="{Binding PartNumber}"/>
-                        <TextBlock Grid.Column="1" 
-                                   Text="{Binding Count}"/>
-                    </Grid>
-                </DataTemplate>
-            </GridView.ItemTemplate>
-        </GridView>
+        <StackPanel Orientation="Vertical" Background="#EDF2F6">
+            <Button Grid.Row="0" 
+                    Grid.Column="0"
+                    Content="+ Add Track"
+                    Width="300"
+                    Command="{Binding AddSectionCommand}" Style="{StaticResource AddElementButtonStyle}"/>
+       
+            <ListView  ItemsSource="{Binding TrackList}"
+                      SelectedItem="{Binding CurrentTrack, Mode=TwoWay}" >
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding PartNumber}" />
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </StackPanel>
+           <TextBlock HorizontalAlignment="Center"
+                       Margin="0 200 0 0"
+                       Text="Select an item to display"
+                       FontWeight="Bold"
+                       Grid.Column="1"
+                       Visibility="Collapsed"/>
+        <Grid x:Name="DetailGrid"
+              Grid.Column="1"
+              Padding="100 10 0 0"
+              Visibility="{Binding DetailVisibility, Mode=TwoWay}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Text="Details of track"
+                       FontWeight="Bold"
+                       FontSize="20"
+                       Margin="10 10 0 0"/>
+            <StackPanel Grid.Column="0" 
+                       Grid.Row="1" 
+                        Orientation="Horizontal">
+                <TextBlock  Text="Partnumber: "
+                            Margin="0 12 0 0"/>
+                <TextBox Margin="50 0 0 0"
+                         MaxHeight="10"
+                         InputScope="Number"
+                         Text="{Binding CurrentTrack.PartNumber, Mode=OneWay}"
+                         IsReadOnly="True"/>
+            </StackPanel>
+            <StackPanel Grid.Column="0" 
+                       Grid.Row="2" 
+                        Orientation="Horizontal">
+                <TextBlock  Text="Count: "
+                            Margin="0 12 0 0"/>
+                <TextBox Margin="86 0 0 0"
+                         MaxHeight="10"
+                         InputScope="Number"
+                         Text="{Binding CurrentTrack.Count, Mode=TwoWay}"
+                         />
+            </StackPanel>
+            <StackPanel Grid.Row="3"
+                        Orientation="Horizontal">
+            <Button Content="Save"
+                    Command="{Binding UpdateCommand}"/>
+            <Button Content="Delete"
+                    Margin="80 0 0 0"
+                    Command="{Binding DeleteCommand}"/>
+            </StackPanel>
+
+        </Grid>
+
+        <Grid x:Name="AddGrid"
+              Grid.Column="1"
+              Padding="100 10 0 0"
+              Visibility="{Binding AddVisibility, Mode=TwoWay}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <TextBlock Text="Add new piece of track"
+                       FontWeight="Bold"
+                       FontSize="20"
+                       Margin="10 10 0 0"/>
+            <StackPanel Grid.Column="0" 
+                       Grid.Row="1" 
+                        Orientation="Horizontal">
+                <TextBlock  Text="Partnumber: "
+                            Margin="0 12 0 0"/>
+                <TextBox Margin="50 0 0 0"
+                         MaxHeight="10"
+                         InputScope="Number"
+                         Text="{Binding AddTrackPartNumber, Mode=TwoWay}"/>
+            </StackPanel>
+            <StackPanel Grid.Column="0" 
+                       Grid.Row="2" 
+                        Orientation="Horizontal">
+                <TextBlock  Text="Count: "
+                            Margin="0 12 0 0"/>
+                <TextBox Margin="86 0 0 0"
+                         MaxHeight="10"
+                         InputScope="Number"
+                         Text="{Binding AddTrackCount, Mode=TwoWay}"/>
+            </StackPanel>
+            <Button Grid.Row="3" 
+                    Content="Save"
+                    Command="{Binding AddCommand}"/>
+
+        </Grid>
+        
+        
     </Grid>
 </Page>
