--- a/modelrailwaymanager/StylesDictionary.xaml
+++ b/modelrailwaymanager/StylesDictionary.xaml
@@ -50,6 +50,7 @@
         <Setter Property="Foreground" Value="Gray"/>
         <Setter Property="BorderBrush" Value="DarkGray"/>
         <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="Width" Value="300"/>
         <Setter Property="Padding" Value="8,4,8,4"/>
         <Setter Property="HorizontalAlignment" Value="Left"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
@@ -117,6 +118,26 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+    </Style>
+
+    <Style x:Key="InputBoxStyle" TargetType="TextBox">
+        <Setter Property="Margin" Value="50 0 0 0"/>
+        <Setter Property="MaxHeight" Value="10"/>
+        <Setter Property="Width" Value="150"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+    </Style>
+
+    <Style x:Key="BigInputBoxStyle" TargetType="TextBox">
+        <Setter Property="Margin" Value="50 0 0 0"/>
+        <Setter Property="Height" Value="170"/>
+        <Setter Property="Width" Value="200"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+    </Style>
+
+    <Style x:Key="DetailTitle" TargetType="TextBlock">
+        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+        <Setter Property="Margin" Value="10 10 0 0"/>
     </Style>
 
 </ResourceDictionary>
