--- a/modelrailwaymanager/StylesDictionary.xaml
+++ b/modelrailwaymanager/StylesDictionary.xaml
@@ -132,6 +132,7 @@
         <Setter Property="Height" Value="170"/>
         <Setter Property="Width" Value="200"/>
         <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="AcceptsReturn" Value="True"/>
     </Style>
 
     <Style x:Key="DetailTitle" TargetType="TextBlock">
