--- a/modelrailwaymanager/Views/TrainPage/TrainPage.xaml
+++ b/modelrailwaymanager/Views/TrainPage/TrainPage.xaml
@@ -26,7 +26,12 @@
                 </ListView.ItemTemplate>
             </ListView>
         </StackPanel>
-
+        <TextBlock HorizontalAlignment="Center"
+                    Margin="0 200 0 0"
+                    Text="Select an item to display"
+                    FontWeight="Bold"
+                    Grid.Column="1"
+                    Visibility="{Binding MessageVisibility}"/>
         <Grid x:Name="AddGrid"
               Visibility="{Binding AddVisibility}"
               Grid.Column="1"
