--- a/modelrailwaymanager/Views/MainPage/MainPage.xaml
+++ b/modelrailwaymanager/Views/MainPage/MainPage.xaml
@@ -11,7 +11,7 @@
                DisplayMode="CompactOverlay"
                IsPaneOpen="False" 
                CompactPaneLength="50"
-               OpenPaneLength="180">
+               OpenPaneLength="190">
         <SplitView.Pane>
             <StackPanel Background="Gray">
                 <Button x:Name="HamburgerButton"
@@ -51,7 +51,7 @@
                             Width="50" Height="50" 
                             Background="Transparent"
                             Click="MenuClickHandler"/>
-                    <TextBlock Text="Wagons" 
+                    <TextBlock Text="Wagon overview" 
                                FontSize="18" 
                                VerticalAlignment="Center" />
                 </StackPanel>
@@ -59,7 +59,12 @@
         </SplitView.Pane>
         <SplitView.Content>
             <Frame x:Name="ContentFrame"
-                   Margin="0,0,0,0"/>
+                   Margin="0,0,0,0">
+                <TextBlock Text="Select a category from the menu to get started"
+                           Style="{StaticResource DetailTitle}"
+                           HorizontalAlignment="Center"
+                           Margin="0 200 0 0"/>
+            </Frame>
         </SplitView.Content>
     </SplitView>
 </Page>
