--- a/modelrailwaymanager/Views/MainPage/MainPage.xaml
+++ b/modelrailwaymanager/Views/MainPage/MainPage.xaml
@@ -7,7 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <SplitView x:Name="MySplitView"
+    <SplitView x:Name="SplitView"
                DisplayMode="CompactOverlay"
                IsPaneOpen="False" 
                CompactPaneLength="50"
